# sshd-rando

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  README.md  Spoiler Log.txt  build.py  filepathconstants.py  max_entrance_rando.yaml  pyproject.toml  randomize.py  req-dev-requirements.txt  requirements-dev.txt  requirements.txt  sshdrando.py  sshdrando.spec  sshdrando_nogui.py  start_with_gui.py  test-shop-data.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
asm/: README.md  assemble.py  disassemble.py  linker.ld  original-symbols.yaml  symbols.yaml
asm/additions/rust-additions/: Cargo.toml  rust-toolchain.toml
asm/additions/rust-additions/.cargo/: config.toml
asm/additions/rust-additions/src/: _template.rs  actor.rs  ammo.rs  color.rs  custom.rs  debug.rs  entrance.rs  event.rs  fix.rs  flag.rs  input.rs  item.rs  lib.rs  lyt.rs  mainloop.rs  math.rs  mem.rs  minigame.rs  player.rs  rng.rs  savefile.rs  settings.rs  shop.rs  snd.rs  structs.rs  traps.rs  yuzu.rs
assets/: BZS_Template.arc  U8_Template.arc  sshdr-logo.tpl  th_rogo_03.tpl  th_rogo_04.tpl
constants/: asmconstants.py  configconstants.py  configdefaults.py  guiconstants.py  itemconstants.py  itemnames.py  musicconstants.py  patchconstants.py  randoconstants.py  shopconstants.py  tboxsubtypes.py  trackerprettyitems.py  verificationconstants.py
data/: README.md  bird_statue_data.yaml  differences_between_hdr_and_sdr.md  entrance_shuffle_data.yaml  gossip_stone_data.yaml  items.yaml  locations.yaml  macros.yaml  plandomizer_example.yaml  settings_list.yaml  tracker_areas.yaml  (+1 more)
(+540 files in other folders)
